[gd_scene load_steps=20 format=3 uid="uid://dr2ent0anvlpr"]

[ext_resource type="Script" uid="uid://cloou2v6s6b3r" path="res://Player/player.gd" id="1_lwtpo"]
[ext_resource type="Texture2D" uid="uid://dk5lk5uu5jrit" path="res://Assets/Prototype_Character.png" id="2_lwtpo"]
[ext_resource type="PackedScene" uid="uid://dvbpr075re2i7" path="res://Components/health_component.tscn" id="3_1ivvi"]
[ext_resource type="PackedScene" uid="uid://cojl5y5l5d5il" path="res://Components/stats_component.tscn" id="4_uju65"]
[ext_resource type="PackedScene" uid="uid://cu1ac4u1eij3r" path="res://Components/hurt_box_component.tscn" id="6_x1lg7"]
[ext_resource type="PackedScene" uid="uid://bgsa7n8uh42s4" path="res://Components/velocity_component.tscn" id="7_fv1lb"]
[ext_resource type="PackedScene" uid="uid://i2xhgmpq85jb" path="res://Components/status_manager.tscn" id="8_6cmvd"]
[ext_resource type="PackedScene" uid="uid://dbxwhs23x2n72" path="res://Components/spell_manager.tscn" id="9_00tjw"]
[ext_resource type="PackedScene" uid="uid://bckljxo0w00eb" path="res://Components/hit_box_component.tscn" id="9_x1lg7"]
[ext_resource type="PackedScene" uid="uid://veny71hspg3j" path="res://Spells/cure_spell.tscn" id="10_apopc"]
[ext_resource type="PackedScene" uid="uid://bt1mfwkdigxr1" path="res://Spells/fireball.tscn" id="11_5htga"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lwtpo"]
radius = 18.0
height = 36.0

[sub_resource type="Animation" id="Animation_k1w2f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pr33g"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_t6k6s"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_w6ck0"]
resource_name = "walk_left"

[sub_resource type="Animation" id="Animation_oufu5"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_xcwra"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1yygv"]
_data = {
&"RESET": SubResource("Animation_k1w2f"),
&"idle": SubResource("Animation_pr33g"),
&"walk_down": SubResource("Animation_t6k6s"),
&"walk_left": SubResource("Animation_w6ck0"),
&"walk_right": SubResource("Animation_oufu5"),
&"walk_up": SubResource("Animation_xcwra")
}

[node name="Hero" type="CharacterBody2D"]
collision_mask = 144
script = ExtResource("1_lwtpo")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(3, 3)
texture = ExtResource("2_lwtpo")
hframes = 4
vframes = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_lwtpo")

[node name="HealthComponent" parent="." instance=ExtResource("3_1ivvi")]
max_health = 10

[node name="StatsComponent" parent="." instance=ExtResource("4_uju65")]
base_defense = 5
base_strength = 5
base_magic = 5
base_magic_def = 5
base_crit_rate = 5.0
max_mp = 10

[node name="HurtBoxComponent" parent="." node_paths=PackedStringArray("health_component", "stats_component") instance=ExtResource("6_x1lg7")]
collision_layer = 1
collision_mask = 144
health_component = NodePath("../HealthComponent")
stats_component = NodePath("../StatsComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
light_mask = 0
visibility_layer = 0
position = Vector2(0, 17)
shape = SubResource("CapsuleShape2D_lwtpo")

[node name="VelocityComponent" parent="." instance=ExtResource("7_fv1lb")]
BASE_SPEED = 250.0

[node name="StatusManager" parent="." instance=ExtResource("8_6cmvd")]

[node name="HitBoxComponent" parent="." instance=ExtResource("9_x1lg7")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1yygv")
}

[node name="SpellManager" parent="." node_paths=PackedStringArray("spell_array") instance=ExtResource("9_00tjw")]
spell_array = [NodePath("Fireball"), NodePath("Cure Spell")]

[node name="Cure Spell" parent="SpellManager" instance=ExtResource("10_apopc")]

[node name="Fireball" parent="SpellManager" instance=ExtResource("11_5htga")]
